--- a/index.html
+++ b/index.html
@@ -238,6 +238,15 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd23-Qatar-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
+<p><a href="./2025/2025-Rd23-Qatar-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2025/2025-Rd23-Qatar-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd23-Qatar-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd23-Qatar-Grand-Prix-Race_rcm.csv">R:Race Control
+Message CSV</a><br />
+<a href="https://youtu.be/JFpQSlofGtI">GAP Graph animation</a></p>
 <h2 data-number="1.2" id="rd22-las-vegas-grand-prix"><span
 class="header-section-number">1.2</span> Rd22 Las Vegas Grand Prix</h2>
 <p><a href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf">FP1:
