--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ class="toc-section-number">1.1.1</span> Week1 Day1</a></li>
 class="toc-section-number">1.1.2</span> Week1 Day2</a></li>
 <li><a href="#week1-day3" id="toc-week1-day3"><span
 class="toc-section-number">1.1.3</span> Week1 Day3</a></li>
+<li><a href="#week2-day1" id="toc-week2-day1"><span
+class="toc-section-number">1.1.4</span> Week2 Day1</a></li>
 </ul></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
@@ -245,6 +247,13 @@ class="header-section-number">1.1.3</span> Week1 Day3</h3>
 <a href="./2026/2026-Pre-Season-Testing-1-3_laptime.csv">Laptime
 CSV</a><br />
 <a href="./2026/2026-Pre-Season-Testing-1-3_rcm.csv">RaceControl Message
+CSV</a></p>
+<h3 data-number="1.1.4" id="week2-day1"><span
+class="header-section-number">1.1.4</span> Week2 Day1</h3>
+<p><a href="./2026/2026-Pre-Season-Testing-2-1.pdf">Plot PDF</a><br />
+<a href="./2026/2026-Pre-Season-Testing-2-1_laptime.csv">Laptime
+CSV</a><br />
+<a href="./2026/2026-Pre-Season-Testing-2-1_rcm.csv">RaceControl Message
 CSV</a></p>
 <h1 data-number="2" id="season-1"><span
 class="header-section-number">2</span> 2025 Season</h1>
